cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8.txt
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/Config.java:5: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlAccessType;
                                ^
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/Config.java:6: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlAccessorType;
                                ^
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/Config.java:7: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlElement;
                                ^
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/Config.java:12: error: cannot find symbol
@XmlAccessorType(XmlAccessType.FIELD)
 ^
  symbol: class XmlAccessorType
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigBassReal5.java:6: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigBassReal5.java:11: error: cannot find symbol
@XmlRootElement
 ^
  symbol: class XmlRootElement
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigBassReal6.java:6: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigBassReal6.java:11: error: cannot find symbol
@XmlRootElement
 ^
  symbol: class XmlRootElement
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigFile.java:5: error: package javax.xml.bind does not exist
import javax.xml.bind.JAXBContext;
                     ^
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigFile.java:6: error: package javax.xml.bind does not exist
import javax.xml.bind.JAXBException;
                     ^
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigFile.java:7: error: package javax.xml.bind does not exist
import javax.xml.bind.Marshaller;
                     ^
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigFile.java:8: error: package javax.xml.bind does not exist
import javax.xml.bind.Unmarshaller;
                     ^
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigGuitarReal6.java:6: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigGuitarReal6.java:11: error: cannot find symbol
@XmlRootElement
 ^
  symbol: class XmlRootElement
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigBassReal4.java:6: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigBassReal4.java:11: error: cannot find symbol
@XmlRootElement
 ^
  symbol: class XmlRootElement
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigDrums.java:6: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigDrums.java:11: error: cannot find symbol
@XmlRootElement
 ^
  symbol: class XmlRootElement
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/Config.java:12: error: cannot find symbol
@XmlAccessorType(XmlAccessType.FIELD)
                 ^
  symbol: variable XmlAccessType
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/Config.java:16: error: cannot find symbol
	@XmlElement
	 ^
  symbol:   class XmlElement
  location: class Config
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/Config.java:19: error: cannot find symbol
	@XmlElement
	 ^
  symbol:   class XmlElement
  location: class Config
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/Config.java:22: error: cannot find symbol
	@XmlElement
	 ^
  symbol:   class XmlElement
  location: class Config
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/Config.java:25: error: cannot find symbol
	@XmlElement
	 ^
  symbol:   class XmlElement
  location: class Config
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/Config.java:28: error: cannot find symbol
	@XmlElement
	 ^
  symbol:   class XmlElement
  location: class Config
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigFile.java:22: error: cannot find symbol
			JAXBContext jaxb = JAXBContext.newInstance(clazz);
			^
  symbol:   class JAXBContext
  location: class ConfigFile
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigFile.java:22: error: cannot find symbol
			JAXBContext jaxb = JAXBContext.newInstance(clazz);
			                   ^
  symbol:   variable JAXBContext
  location: class ConfigFile
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigFile.java:23: error: cannot find symbol
			Marshaller marshaller = jaxb.createMarshaller();
			^
  symbol:   class Marshaller
  location: class ConfigFile
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigFile.java:24: error: cannot find symbol
			marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, true);
			                       ^
  symbol:   variable Marshaller
  location: class ConfigFile
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigFile.java:26: error: cannot find symbol
		} catch (JAXBException e) {
		         ^
  symbol:   class JAXBException
  location: class ConfigFile
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigFile.java:38: error: cannot find symbol
				JAXBContext jaxb = JAXBContext.newInstance(clazz);
				^
  symbol:   class JAXBContext
  location: class ConfigFile
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigFile.java:38: error: cannot find symbol
				JAXBContext jaxb = JAXBContext.newInstance(clazz);
				                   ^
  symbol:   variable JAXBContext
  location: class ConfigFile
../dataset/june2020_dataset_copy/url9e7e48285f_nalbachk_MidiToPhaseShift_tgz-pJ8-com_my_main_MainJ8/src/com/my/config/ConfigFile.java:39: error: cannot find symbol
				Unmarshaller unmarshaller = jaxb.createUnmarshaller();
				^
  symbol:   class Unmarshaller
  location: class ConfigFile
32 errors
